--- a/playbooks/seed.yml
+++ b/playbooks/seed.yml
@@ -4,7 +4,7 @@
     - include_role:
         name: ansible-tower-manage
         tasks_from: "{{tower_tasks}}.yml"
-      loop: "{{ tower_object types }}"
+      loop: "{{ tower_object_types }}"
       loop_control:
         loop_var: tower_tasks
       vars:
