--- a/playbooks/install.yml
+++ b/playbooks/install.yml
@@ -31,4 +31,27 @@
   roles:
     - ansible-tower-manage
 
+  post_tasks:
+    - name: Copy certs into place
+      become: true
+      copy:
+        src: ../tower.cert
+        dest: /etc/tower/tower.cert
+      tags:
+        - tower_certs
+
+    - name: Copy cert key into place
+      become: true
+      copy:
+        src: ../tower.key
+        dest: /etc/tower/tower.key
+      tags:
+        - tower_certs
+
+    - name: Restart Ansible tower service
+      become: true
+      command: ansible-tower-service restart
+      tags:
+        - tower_certs
+
 ...
