--- a/examples/playbooks/webserver.yml
+++ b/examples/playbooks/webserver.yml
@@ -15,5 +15,5 @@
 
     - name: Put content on webserver
       copy:
-        content: "<h1>Welcome to Summit at sites</h1>"
+        content: "<h1>Welcome to the webserver</h1>"
         dest: /usr/share/nginx/html/index.html
