--- a/playbooks/configure.yml
+++ b/playbooks/configure.yml
@@ -4,10 +4,11 @@
   vars_files:
     - "../vars/base_config.yml"
   collections:
-    - redhat-cop.tower_configuration
+    - tompage1994.tower_configuration
   roles:
     - organizations
     - credentials
     - projects
     - inventories
     - inventory_sources
+    - tower_settings
